# python-vivotek

./: .editorconfig  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_test.txt  sample.py  setup.py
.github/workflows/: pylint.yml  pytest.yml  verify.yml
libpyvivotek/: __init__.py  vivotek.py
scripts/: release.sh
tests/: __init__.py  test_vivotek_camera.py  vivotek_camera_test.py
tests/fixtures/vcr_cassettes/: vivotek_camera_event_enabled_false.yaml  vivotek_camera_event_enabled_true.yaml  vivotek_camera_get_param_error.yaml  vivotek_camera_get_param_invalid_credentials.yaml  vivotek_camera_model_name.yaml  vivotek_camera_model_name_admin.yaml  vivotek_camera_model_name_viewer.yaml  vivotek_camera_model_name_viewer_digest.yaml  vivotek_camera_set_param_disable_event.yaml  vivotek_camera_set_param_enable_event.yaml  vivotek_camera_set_param_enable_event_operator.yaml  vivotek_camera_set_param_error.yaml  vivotek_camera_set_param_invalid_credentials.yaml  vivotek_camera_snapshot.yaml  vivotek_camera_test_model_name_anon.yaml
